# MindMirror---Your-Digital-Second-Mind

backend-fastapi/: .gitignore  pyproject.toml  server.py  test.ipynb
backend-fastapi/controllers/: chat_controller.py
backend-fastapi/graph/: graph_builder.py  nodes.py  prompt.py  state.py
backend-fastapi/graph/tools/: search_tool.py  tavily_tool.py
backend-fastapi/middlewares/: isAuth.py
backend-fastapi/routes/: chat_route.py
backend-fastapi/utils/: database.py
backend-node/: package-lock.json  package.json  server.js
backend-node/controllers/: auth.controller.js  sessions.controller.js  user.controller.js
backend-node/middlewares/: isAuth.js
backend-node/models/: session.model.js  user.model.js
backend-node/routes/: auth.route.js  user.route.js
backend-node/utils/: connectDB.js  token.js
frontend/: newTab.html  package-lock.json  package.json  popup.html  tailwind.config.js  vite.config.js
frontend/public/: manifest.json
frontend/src/background/: background.js  sessionManager.js
frontend/src/content/: content.js
frontend/src/newTab/: App.jsx  index.css  main.jsx
frontend/src/newTab/components/: ChatArea.jsx  ChatNavbar.jsx  Sidebar.jsx  TutorialModal.jsx
frontend/src/newTab/pages/: Chatpage.jsx
frontend/src/popup/: App.jsx  index.css  main.jsx
frontend/src/popup/components/: Navbar.jsx
frontend/src/popup/pages/: Login.jsx  Status.jsx
frontend/src/shared/api/: api.js
frontend/src/shared/store/: chatSlice.js  store.js  userSlice.js
frontend/src/shared/utils/: firebase.js
